--- a/practice-two/src/components/common/Button/style.css
+++ b/practice-two/src/components/common/Button/style.css
@@ -3,8 +3,8 @@
   position: absolute;
   top: -9px;
   right: -2px;
-  height: 60px;
-  width: 64px;
+  height: 100%;
+  width: 100%;
   display: block;
   margin: 0 auto;
 }
